fixed the overlapping border

--- a/src/public/css/catalogue.css
+++ b/src/public/css/catalogue.css
@@ -144,7 +144,7 @@ body{
 
 /* Media query */
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 749px) {
 
 
     .container{
