--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -23,13 +23,16 @@ body{
     border:#eee .25rem solid;
 }
 .container-body{
+    /* border: .25rem solid purple; */
     position: absolute;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
-    margin: auto;
+    /* gap: 1rem; */
+    left: 0;
+    right: 0;
+    
 }
 /* Logo design */
 .logo{
@@ -61,7 +64,8 @@ body{
 .post-container{
     height: fit-content;
     width: 35rem;
-    /* display: block; */
+    align-self: center;
+    margin: auto;
 }
 /*                */
 .add{
@@ -79,7 +83,6 @@ body{
     z-index: 100;
 }
 .post-heading{
-    border: .2rem solid tomato;
     font-size: 1.5rem;
     color: rgb(65, 64, 64);
     font-weight: 600;
@@ -277,18 +280,20 @@ body{
         margin: 0 1rem;
     }
     .container-body{
-        position: relative;
+        /* position: relative; */
+        /* border: .2rem solid black; */
         display: block;
         gap: 0;
-        margin: 0;
+        margin: auto;
     }
     .post-container{
         width: 98vw;
         right: 0;
     }
     .post-body{
+        margin-top: 0;
         margin: auto;
-        border: .2rem solid red;
+        /* border: .2rem solid red; */
     }
     .post-body video{
         width: 100%;
